--- a/backend/src/backend.env
+++ b/backend/src/backend.env
@@ -3,3 +3,8 @@ DB_PASSWORD="123456"
 DB_HOST="localhost"
 DB_PORT="3306"
 DB_NAME="cardapio_db"
+
+FTP_HOST="ftp.drivehq.com"
+FTP_USER=whandersonba
+FTP_PASS=S@mos147+-
+FTP_DIR=/img
