--- a/chatbot_whatsapp/package.json
+++ b/chatbot_whatsapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.27.0"
+    "whatsapp-web.js": "^1.27.0",
+    "sqlite3": "^5.1.7"
   }
 }
