--- a/chatbot_whatsapp/package.json
+++ b/chatbot_whatsapp/package.json
@@ -11,8 +11,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.27.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "whatsapp-web.js": "^1.27.0"
   }
 }
