--- a/frontend_pwa/package.json
+++ b/frontend_pwa/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
