--- a/CardapioDigital.Api/CardapioDigital.Api/appsettings.json
+++ b/CardapioDigital.Api/CardapioDigital.Api/appsettings.json
@@ -14,5 +14,14 @@
     "Key": "SuaChaveSecretaMuitoLongaESeguraAquiParaJWT",
     "Issuer": "CardapioDigitalApi",
     "Audience": "CardapioDigitalClients"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.seudominio.com", // Ex: smtp.sendgrid.net, smtp.mailgun.org, smtp.gmail.com
+    "Port": 587, // Geralmente 587 ou 465 (para SSL)
+    "EnableSsl": true, // Habilitar SSL/TLS
+    "UserName": "seu_email@seudominio.com", // Seu e-mail de envio
+    "Password": "sua_senha_de_email_ou_api_key", // Senha ou API Key
+    "FromEmail": "noreply@cardapiodigital.com", // E-mail remetente
+    "FromName": "Cardapio Digital" // Nome do remetente
   }
 }
